# aibootcamp

./: .gitignore  LICENSE  README.md  pyproject.toml  run_mcp.sh
acp/acp-code/: README.md  crew_acp_server.py  pyproject.toml  smolagents_acp_server.py
agent/crewai-ddd-expert/: README.md  uv.toml
agent/crewai-ddd-expert/output/: domain_model.java  domain_model.md  domain_model_java.md  domain_model_java_test.md  domain_model_test.java
agent/crewai-ddd-expert/src/crewai_ddd_expert/: crew.py
agent/crewai-ddd-expert/src/crewai_ddd_expert/config/: tasks.yaml
agent/crewai-flow-multimodal/: .env.example  README.md  assemblyai_client.py  command_handler.py  command_pattern.py  config.py  crewai_client.py  data_ingestion_flow.py  embedding_client.py  llm_client.py  main.py  milvus_client.py  multimodal_rag_flow.py  pyproject.toml
agent/crewai-flow-multimodal/client/: __init__.py  assemblyai_client.py  embedding_client.py  llm_client.py  milvus_client.py
agent/crewai-flow-multimodal/command/: __init__.py  command_handler.py  command_pattern.py
agent/crewai-flow-multimodal/crewai_workflows/: __init__.py  crewai_client.py  data_ingestion_flow.py  multimodal_rag_flow.py
agent/crewai-quickstart/: README.md  pyproject-old.toml  pyproject.toml
agent/crewai-quickstart/output/: report.md
agent/crewai-quickstart/src/crewai_quickstart/: .env.example  crew.py  main.py
agent/crewai_ddd_expert/: README.md  pyproject.toml
agent/crewai_ddd_expert/output/: domain_model.md
agent/crewai_ddd_expert/src/crewai_ddd_expert/: crew.py  main.py
agent/crewai_ddd_expert/src/crewai_ddd_expert/config/: agents.yaml
agent/langchain-react-agent/: README.md  pyproject.toml  server.py  test_simple.py
framework/langchain/: README.md  pyproject.toml
framework/langchain-samples/: chain-demo.py  pyproject.toml
framework/langchain/chain-demo/: README.md  chain-demo-simplified.py  chain-demo.py
framework/langchain/chain_demo/: __init__.py  chain-demo-standard.py
framework/langchain/prompt_template/: __init__.py  chat_prompt_template.py  frew_shot_prompt_template.py  person_info_prompt_template.py
llm/: README.md  dataloader.py  input_embeddings.py  pyproject.toml
llm/basic_concept/: __init__.py  generate_text.py  music_recommendation.py  tiktoken_tokenizer.py  use_sliding_window.py
llm/easy-gpt/: feed_forward.py  gpt_model.py  load_model.py  train_gpt.py  transformer_block.py
llm/qlora-example/: qlora.py
mcp/finacial-analyst-deepseek/: CN_STOCK_GUIDE.md  MIGRATION_SUMMARY.md  QUICKSTART_CN.md  README.md  finance_crew.py  maotai_analysis_example.py  pyproject.toml  server.py  simple_server.py  stock_analysis.py  tesla_analysis.py  tesla_analysis_demo.py  tesla_analysis_final.py  test_akshare.py
mcp/finacial-analyst-deepseek/doc/: ARCHITECTURE_COMPARISON.md  CHANGELOG_CN.md  EXECUTION_FLOW.md  QUICKSTART_CN.md
mcp/mcp-agentic-rag/: .env.example  README.md  pyproject.toml  rag_code.py  rag_retriever.py  server.py  test_refactoring.py  test_search_engines.py  test_simple_ddgs.py  test_web_searcher.py  web_searcher.py
mcp/mcp-agentic-rag/docs/: QUICKSTART.md
mcp/mcp-agentic-rag/src/mcp_agentic_rag/: .env.example  __init__.py  rag_retriever.py  server.py  web_searcher.py
mcp/mcp-agentic-rag/tests/: test_refactoring.py  test_search_engines.py  test_simple_ddgs.py  test_web_searcher.py
mcp/mcp-agentic-rag/tests/mcp_agentic_rag/: __init__.py  test_refactoring.py  test_search_engines.py  test_simple_ddgs.py  test_web_searcher.py
mcp/mowen-mcp/: .env.example  EXAMPLES.md  README.md  USAGE.md  client.py  main.py  pyproject.toml  server.py  test_tools.py
mcp/sqlite-mcp/: README.md  client.py  demo.db  pyproject.toml  pyrightconfig.json  server.py
rag/document-chat-rag/: README.md  app.py  chroma_repository.py  chroma_repository_new.py  chroma_repository_old.py  config.py  controller.py  custom_query_engine.py  document_converter.py  llm_service.py  main_self_hosted_chromeDB.py  milvus_repository.py  model.py  pyproject.toml  rag_demo.py  start_milvus.py  start_ollama.py  test_milvus.py  view.py
rag/document-summary-rag/: README.md  docuemnt_summanry.py  main.py  pyproject.toml
rag/document-summary-rag/city_index/: default__vector_store.json  docstore.json  index_store.json
rag/document-summary-rag/data/: 上海.txt  北京.txt  广州.txt  杭州.txt  深圳.txt
rag/langextract-rag/: README.md  README_word_to_text.md  example_usage.py  extract_medician_entity.py  long_local_text_extract.py  long_text_extract.py  main.py  pyproject.toml  word_to_text.py
rag/langextract-rag/document/: bounded_context.docx  extracted_text.txt
rag/llamaindex-rag/: README.md  memory_rag.py  pyproject.toml  rag_main.py
rag/llamaindex-rag/basic-concepts/: common_file_parser.py  common_text_splitter.py  full_query_engine.py  retriever_router_query_engine.py  setting_with_sentence_splitter.py  use_ingestion_pipeline.py  use_sentence_splitter.py
rag/llamaindex-rag/basic-concepts/data/: ddd01.txt  ddd02.txt  ddd_articles.md
rag/llamaindex-rag/chroma_db/: chroma.sqlite3
rag/llamaindex-rag/documents/: 前言.docx
rag/llamaindex-rag/rag-demo/: rag_main.py
rag/rag-on-milvus/: README.md  advanced_rag_llamaindex_milvus.py  main.py  pyproject.toml
rag/rag-on-milvus/data/: milvus_doc.md
src/aibootcamp/mcp/mcp-agentic-rag/: rag_code.py
src/aibootcamp/mcp/sqlite_mcp/: client.py  server.py
