[project]
name = "aibootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "zhangyi",email = "zhangyi1101@foxmail.com"}
]
readme = "README.md"

[tool.poetry]
packages = [{include = "aibootcamp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10, <=3.13"
mcp = ">=1.6.0"
llama-index = "^0.12.46"
llama-index-llms-ollama = ">=0.5.4"
llama-index-tools-mcp = ">=0.1.1"
fastmcp = "^2.10.1"
qdrant-client = "^1.14.3"
crewai = "^0.121.0"
crewai-tools = "^0.45.0"
pandas = "^2.2.3"
pdfplumber = "^0.11.6"
pydantic = "^2.11.5"
reportlab = "^4.4.1"
yfinance = "^0.2.61"
