[project]
name = "crewai-ddd-expert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.148.0",
    "crewai-tools>=0.55.0",
]

[project.scripts]
run_crew = "crewai_ddd_expert.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_ddd_expert"]