[project]
name = "mcp-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.6.0",
    "fastmcp>=2.10.5",
    "llama-index>=0.12.49",
    "llama-index-embeddings-huggingface>=0.4.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.15.0",
    "requests>=2.31.0",
    "tqdm>=4.67.1",
]
