[project]
name = "sqlite-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.5",
    "llama-index>=0.12.49",
    "llama-index-llms-deepseek>=0.2.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-tools-mcp>=0.2.6",
]
