[project]
name = "document-chat-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.37.0",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-embeddings-ollama>=0.8.3",
    "llama-index-llms-deepseek>=0.2.2",
    "llama-index-llms-ollama>=0.7.4",
    "llama-index-vector-stores-qdrant>=0.8.5",
    "llama-index-vector-stores-milvus>=0.2.0",
    "nltk>=3.9.1",
    "ollama>=0.6.0",
    "streamlit>=1.50.0",
    "watchdog>=6.0.0",
    "llama-index-readers-file>=0.2.0",
    "docx2txt>=0.9",
    "reportlab>=4.4.4",
    "markdown2>=2.5.4",
    "weasyprint>=66.0",
    "python-docx>=1.2.0",
    "pymilvus>=2.4.0",
    "llama-index-embeddings-openai>=0.5.1",
]
